# starkex-bridge

./: .env.example  .gitignore  .gitmodules  LICENSE  Makefile  README.md  foundry.toml  lcov.info  remappings.txt  slither.config.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  wiki.yml
common/: LibDeployBridge.sol
script/: 01_Deploy.s.sol  ConfigureReceptor.s.sol  DeployBridgeAndReceptor.s.sol  DeployBridgeReceptorTimelock.s.sol  DeployTransmitter.s.sol
script/data/: DataIO.sol  bridge  receptor  transmitter
src/: BridgeDiamond.sol  Modifiers.sol
src/constants/: Constants.sol
src/facets/: AccessControlFacet.sol  DepositFacet.sol  DiamondCutFacet.sol  DiamondLoupeFacet.sol  ERC165Facet.sol  NFTFacet.sol  StakerFacet.sol  StateFacet.sol  TokenRegisterFacet.sol  WithdrawalFacet.sol
test/: AccessControlFacet.t.sol  CompactMerkleProof.t.sol  DepositFacet.t.sol  ERC165Facet.t.sol  IntegrationTest.t.sol  MigrationTest.t.sol  StateFacet.t.sol  TokenRegisterFacet.t.sol  WithdrawalFacet.t.sol
test/compactMerkleProof/differentialTesting/: Cargo.toml
test/compactMerkleProof/differentialTesting/src/: main.rs
test/compactMerkleProof/differentialTesting/trie/trie-db/: Cargo.toml
test/compactMerkleProof/differentialTesting/trie/trie-db/src/: lib.rs
test/compactMerkleProof/differentialTesting/trie/trie-db/src/proof/: verify.rs
test/compactMerkleProof/differentialTesting/trie/trie-db/test/: Cargo.toml
test/compactMerkleProof/differentialTesting/trie/trie-db/test/src/: proof.rs
utils/: run_script.sh  run_script_local.sh
(+145 files in other folders)
