[package]
name = "merkle-patricia-trie-proofs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
trie-db = { path = "trie/trie-db", version = "0.22.1"}
hash-db = { path = "trie/hash-db", version = "0.15.2"}
rustc-hex = { version = "2.1.0" }
memory-db = { path = "trie/memory-db", version = "0.27.0" }
trie-root = { path = "trie/trie-root", version = "0.16.0"}
reference-trie = { path = "trie/test-support/reference-trie", version = "0.23.0" }
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"